Fix spacing issues

--- a/src/components/widgets/rows/FormRow.less
+++ b/src/components/widgets/rows/FormRow.less
@@ -2,7 +2,7 @@
   display: flex;
 
   > span {
-    flex: 1;
+    flex: 2;
     display: flex;
     align-items: center;
 
@@ -22,6 +22,6 @@
 
   > .Uenigboks,
   > .FormRow__padder {
-    flex: 2;
+    flex: 3;
   }
 }
