--- a/src/components/widgets/rows/IconRow.less
+++ b/src/components/widgets/rows/IconRow.less
@@ -3,7 +3,7 @@
 
   .IconRow__left {
     display: flex;
-    flex: 1;
+    flex: 2;
     align-items: center;
 
     > svg {
@@ -27,6 +27,6 @@
 
   .IconRow__right {
     display: flex;
-    flex: 2;
+    flex: 3;
   }
 }
