--- a/src/components/widgets/rows/ListRow.less
+++ b/src/components/widgets/rows/ListRow.less
@@ -5,7 +5,7 @@ div.ListRow {
     display: flex;
 
     > .ListItem__left {
-      flex: 1;
+      flex: 2;
       display: flex;
 
       > .typo-normal {
@@ -23,7 +23,7 @@ div.ListRow {
     }
 
     > .ListItem__right {
-      flex: 2;
+      flex: 3;
     }
   }
 }
